# cvlib

./: .gitignore  Makefile.am  README.txt  configure.ac  cvlib-help.pd  cvlib-meta.pd  cvlib.pd_linux
examples/: Makefile.am
help/: cvApproxContours-help.pd  cvAthreshold.pd  cvCanny.pd  cvContoursConvexHull-help.pd  cvContoursConvexityDefects-help.pd  cvContoursConvexityDefects-old-help.pd  cvContoursFFT-help.pd  cvContoursFFT.pd  cvContoursFeatures-help.pd  cvContoursPoints-help.pd  cvDrawCircle-help.pd  cvDrawCircles-help.pd  cvDrawContours-help.pd  cvFindContours-help.pd  cvForEachContour-help.pd  cvForEachContour.pd  cvHuCompare-help.pd  cvHuCompare.pd  cvHuCompare2.pd  cvInterpolContours-help.pd  cvRouteContours-help.pd  cvShowImage-help.pd  cvSortContours-help.pd  cvlib-overview.pd  test_pix_opencvlib.pd
src/: Makefile.am  cvlib.cc  cvlib_approx_poly.cpp  cvlib_approx_poly.h  cvlib_circle.cpp  cvlib_circle.h  cvlib_contours_convex_hull.cpp  cvlib_contours_convex_hull.h  cvlib_contours_convexity_defects.cpp  cvlib_contours_convexity_defects.h  cvlib_contours_features.cpp  cvlib_contours_features.h  cvlib_contours_get_points.cpp  cvlib_contours_get_points.h  cvlib_draw_contours.cpp  cvlib_draw_contours.h  cvlib_find_contours.cpp  cvlib_find_contours.h  cvlib_interpol_contours.cpp  cvlib_interpol_contours.h  cvlib_route_contours.cpp  cvlib_route_contours.h  cvlib_show_image.cpp  cvlib_show_image.h  cvlib_sort_contours.cpp  cvlib_sort_contours.h
src/.libs/: cvlib.pd_linux
